@@ -51,7 +51,8 @@ TESTS = $(top_builddir)/tools/gst-register 	\
 	pipelines/simple_launch_lines		\
 	pipelines/cleanup			\
 	states/sinks				\
-	gst-libs/gdp	
+	gst-libs/controller			\
+	gst-libs/gdp
 
 check_PROGRAMS = $(TESTS)
 
@@ -69,6 +70,9 @@ gst_libs_gdp_SOURCES = \
 	$(top_srcdir)/libs/gst/dataprotocol/dataprotocol.c
 # remove GST_ENABLE_NEW when dataprotocol has been declared API-stable
 gst_libs_gdp_CFLAGS = $(AM_CFLAGS) -DGST_ENABLE_NEW
+
+gst_libs_controller_LDADD = $(GST_OBJ_LIBS) $(CHECK_LIBS) libgstcheck.la \
+	$(top_srcdir)/libs/gst/controller/libgstcontroller-@GST_MAJORMINOR@.la
 
 # valgrind testing
 
