@@ -23,7 +23,7 @@
 /**
  * SECTION:gstpushsrc
  * @short_description: Base class for push based source elements
- * @see_also: #GstBaseTransformc, #GstBaseSink
+ * @see_also: #GstBaseSrc
  *
  * This class is mostly usefull for elements that cannot do
  * random access, or at least very slowly. The source usually
